# qt-eventcalender

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  ComponentBridge.cpp  ComponentBridge.h  ComponentEngineFactory.cpp  ComponentEngineFactory.h  FLUTTER_PHASE2.md  FlutterComponentView.cpp  FlutterComponentView.h  FlutterContainer.cpp  FlutterContainer.h  FlutterFocusFilter.h  FlutterMapItem.cpp  FlutterMapItem.h  FlutterView.cpp  FlutterView.h  FlutterWidgetProxy.cpp  FlutterWidgetProxy.h  NavigationBridge.cpp  NavigationBridge.h  calendarutils.cpp  calendarutils.h  datetimeutils.cpp  eventcalendar.cpp  grpcsyncbackend.cpp  grpcsyncbackend.h  noopsyncbackend.cpp  noopsyncbackend.h  plan.h  planmodel.cpp  planmodel.h  plansyncmanager.cpp  plansyncmanager.h  qgrpcwebchannel.cpp  qgrpcwebchannel.h  qt-flutter-migration.md  sqlplandatabase.cpp  sqlplandatabase.h  (+1 more)
QtFlutterEmbedding/: CMakeLists.txt  ComponentBridge.cpp  ComponentBridge.h  ComponentEngineFactory.cpp  ComponentEngineFactory.h  FlutterComponentView.cpp  FlutterComponentView.h  FlutterContainer.cpp  FlutterContainer.h  FlutterFocusFilter.cpp  FlutterView.cpp  FlutterView.h  FlutterWidgetProxy.cpp  NavigationBridge.cpp  NavigationBridge.h
QtFlutterEmbedding/cmake/: QtFlutterEmbeddingConfig.cmake.in
atoms/: CalendarRange.qml  DatePickerField.qml
doc/: EMBEDDING_MULTIINSTANCE.md  EMBEDDING_PLUGIN_PLAN.md  EMBEDDING_TESTING.md  FLUTTER.md  FLUTTER_WEEK_VIEW_PLAN.md
doc/src/: qtquickcontrols-eventcalendar.qdoc
embedding/: ComponentBridge.h  FlutterComponentView.cpp  FlutterContainer.cpp  FlutterMapItem.cpp  FlutterMapItem.h  NavigationBridge.cpp  NavigationBridge.h  flutter_constants.h
flutter/: DESIGN_SYSTEM.md
flutter/app/: pubspec.yaml
flutter/app/lib/: main.dart  router.dart
flutter/app/lib/screens/: map_component.dart  widget_catalog.dart
flutter/app/test/: widget_test.dart
flutter/app/windows/runner/: Runner.rc
models/: plan.h  sqlplandatabase.h
molecules/: MonthGridDelegate.qml  WeekPlanCell.qml
organisms/: EventSidebar.qml  PlanFooter.qml  UnitFilterSidebar.qml
pages/: eventcalendar.qml
prebuilt/flutter_app/data/flutter_assets/: NOTICES.Z
prebuilt/flutter_engine/: flutter_windows.dll.lib
proto/: calendar.proto
qml/organisms/: PlanFooter.qml
qml/pages/: eventcalendar.qml
qml/templates/: MonthView.qml  WeekView.qml
scripts/: build_flutter.py  build_wasm.py  check_flutter.py  check_wasm.py  serve_wasm.py  start_grpcwebproxy.py  sync_flutter_artifacts.py  test_server.py  test_wasm.py
sync/: grpcchannel_http2.cpp  grpcchannel_web.cpp  plansyncmanager.h
templates/: MonthView.qml  WeekView.qml
tests/: CMakeLists.txt  tst_calendarutils.cpp  tst_datetimeutils.cpp  tst_planmodel.cpp  tst_sqlplandatabase.cpp  tst_weekgrid.cpp
tests/embedding/: flutter_stub.cpp  flutter_stub.h  tst_componentbridge.cpp  tst_componentenginefactory.cpp  tst_fluttercontainer.cpp  tst_navigationbridge.cpp
tests/embedding/stubs/: flutter_export.h  flutter_messenger.h  flutter_plugin_registrar.h  flutter_windows.h
utils/: datetimeutils.h
